--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+difference = "2.0"
+reqwest = { version = "0.11", features = ["blocking"] }
+url = "2.0.0"
